Table Customer {
  customer_id INTEGER [primary key]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  address varchar(100) [not null]
  email varchar(255) [not null, unique]
}

Table Order {
  order_id integer [primary key]
  customer_id integer [not null, ref: > Customer.customer_id]
  order_date DATE [not null]
}

Table OrderLine {
  orderline_id integer [primary key]
  order_id integer [not null, ref: > Order.order_id]
  product_id integer [not null, ref: > Product.product_id]
}

Table Product {
  product_id integer
  name varchar(50) [not null]
  price integer [not null]
}